--- a/config/amex.toml
+++ b/config/amex.toml
@@ -27,8 +27,8 @@ hint_columns = [1]
 [[xsv_to_ledger_record.target_posting.account.xsv_to_entry.hint_mapping]]
 key = """\
     PEPE PIRI PIRI|DELIVEROO|Kew Gardens|HARRODS|LONDON EYE|\
-    WESTMINSTER ABBEY|FACEBOOK KINGS|BEER AND BURGER|NETFLIX|\
-    VUE ENTERTAINMENT LTD|TASTE THE BEST|CHARLOTTE TILBURY BTY|HOTEL CHOCOLAT|\
+    WESTMINSTER ABBEY|FACEBOOK KINGS|BEER AND BURGER|NETFLIX|CINEWORLD|\
+    VUE ENTERTAINMENT LTD|TASTE THE BEST|CHARLOTTE TILBURY BTY|HOTEL CHOCOLAT|COVENT GARDEN PIAZZA|JOHN LEWIS|\
     ZARA|HM.COM|BABEL BEERHOUSE|HOTSTAR UK|REDEMPTION ROASTERS|FRAGRANCE SAMPLES UK|SP LOLAS CUPCAKES|VUE ENTERTAINMENT LTD|\
     TUTTONS|LDN TRANSPORT MUSEUM|LEON|STREET FOOD|CHÂTEAU DE VERSAILLES|WENZELS|ROYAL BOTANIC GARDENS|RBG KEW|LONDON DUNGEON|GAIL|\
     FACEBOOK RATHBONE|COSTA|IVY CAFE|ODEON|HOPPERS|PRET|Airbnb|THE IVY|MCDONALDS|STARBUCKS|CAFF?E|[CK]OFFEE|Print Bucket\
@@ -72,7 +72,7 @@ key = """\
     NEXT NEXTDIRECTORY|J BARBOUR AND SONS|SP GLOVERALL            EARLS BARTON|\
     CHARLES TYRWHITT SHIRTS|BRAVISSIMO LTD|SP ALLBIRDS|\
     SNAPPY SNAPS|SP BABY CENTRE|ALIEXPRESS|JOHN LEWIS DIRECT|\
-    JOJO  NEXT TP|HOBBS LIMITED|ADIDAS|CINEWORLD|\
+    JOJO  NEXT TP|HOBBS LIMITED|ADIDAS|\
     SHEIN DISTRIBUTION|IKEA|WATERSTONE|MECHBOARDS|PILLOWS|NEW BALANCE|BELLROY|RYOHIN KEIKAKU|UNIQLO EUROPE|\
     SP NEARLY NEW CASHME|SP CLAIR DE LUNE|SP CDL-GROUP LLC\
     """
