Split date, note, payee, state

--- a/config/amex.toml
+++ b/config/amex.toml
@@ -28,7 +28,7 @@ hint_columns = [1]
 key = """\
     PEPE PIRI PIRI|DELIVEROO|Kew Gardens|HARRODS|LONDON EYE|\
     WESTMINSTER ABBEY|FACEBOOK KINGS|BEER AND BURGER|NETFLIX|CINEWORLD|\
-    VUE ENTERTAINMENT LTD|TASTE THE BEST|CHARLOTTE TILBURY BTY|HOTEL CHOCOLAT|COVENT GARDEN PIAZZA|JOHN LEWIS|\
+    VUE ENTERTAINMENT LTD|TASTE THE BEST|CHARLOTTE TILBURY BTY|HOTEL CHOCOLAT|COVENT GARDEN PIAZZA|\
     ZARA|HM.COM|BABEL BEERHOUSE|HOTSTAR UK|REDEMPTION ROASTERS|FRAGRANCE SAMPLES UK|SP LOLAS CUPCAKES|VUE ENTERTAINMENT LTD|\
     TUTTONS|LDN TRANSPORT MUSEUM|LEON|STREET FOOD|CHÂTEAU DE VERSAILLES|WENZELS|ROYAL BOTANIC GARDENS|RBG KEW|LONDON DUNGEON|GAIL|\
     FACEBOOK RATHBONE|COSTA|IVY CAFE|ODEON|HOPPERS|PRET|Airbnb|THE IVY|MCDONALDS|STARBUCKS|CAFF?E|[CK]OFFEE|Print Bucket\
