Move condition types to its own file

--- a/config/amex.toml
+++ b/config/amex.toml
@@ -71,7 +71,7 @@ value = "Expenses:Utilities"
 key = """\
     NEXT NEXTDIRECTORY|J BARBOUR AND SONS|SP GLOVERALL            EARLS BARTON|\
     CHARLES TYRWHITT SHIRTS|BRAVISSIMO LTD|SP ALLBIRDS|\
-    SNAPPY SNAPS|SP BABY CENTRE|ALIEXPRESS|JOHN LEWIS DIRECT|\
+    SNAPPY SNAPS|SP BABY CENTRE|ALIEXPRESS|JOHN LEWIS |\
     JOJO  NEXT TP|HOBBS LIMITED|ADIDAS|\
     SHEIN DISTRIBUTION|IKEA|WATERSTONE|MECHBOARDS|PILLOWS|NEW BALANCE|BELLROY|RYOHIN KEIKAKU|UNIQLO EUROPE|\
     SP NEARLY NEW CASHME|SP CLAIR DE LUNE|SP CDL-GROUP LLC\
