--- a/config/monzo.toml
+++ b/config/monzo.toml
@@ -83,7 +83,7 @@ key = "Hoppers|deliveroo|Netflix|ODEON|Burger King|Crown Cafe Bar|Costa Coffee|U
 value = "Expenses:Entertainment"
 
 [[xsv_to_ledger_record.source_posting.account.xsv_to_entry.hint_mapping]]
-key = "Champ De Mars|Airbnb|Sonyliv|Pi Hut"
+key = "Champ De Mars|Airbnb|Sonyliv|Pi Hut|Lemonia"
 value = "Expenses:Entertainment"
 
 [[xsv_to_ledger_record.source_posting.account.xsv_to_entry.hint_mapping]]
