--- a/config/amex.toml
+++ b/config/amex.toml
@@ -26,7 +26,7 @@ hint_columns = [1]
 
 [[xsv_to_ledger_record.target_posting.account.xsv_to_entry.hint_mapping]]
 key = """\
-    PEPE PIRI PIRI|DELIVEROO|Kew Gardens|HARRODS|LONDON EYE|\
+    PEPE PIRI PIRI|DELIVEROO|Kew Gardens|HARRODS|LONDON EYE|TENGA|\
     WESTMINSTER ABBEY|FACEBOOK KINGS|BEER AND BURGER|NETFLIX|CINEWORLD|\
     VUE ENTERTAINMENT LTD|TASTE THE BEST|CHARLOTTE TILBURY BTY|HOTEL CHOCOLAT|COVENT GARDEN PIAZZA|\
     ZARA|HM.COM|BABEL BEERHOUSE|HOTSTAR UK|REDEMPTION ROASTERS|FRAGRANCE SAMPLES UK|SP LOLAS CUPCAKES|VUE ENTERTAINMENT LTD|\
